# Bao

./: .env.docker.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  PRD.md  README.md  SECURITY.md  core_agent_lines.sh  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  turbo.json
app/: AGENTS.md  DESKTOP_PACKAGING.md  README.md  main.py
bao/: __about__.py  __init__.py  __main__.py  _profile_common.py  _profile_migration.py  _profile_mutations.py  _profile_ops.py  _profile_registry_ops.py  _profile_runtime.py  _profile_storage.py  command_text.py  delivery.py  profile.py  progress_scope.py  runtime_diagnostics.py  runtime_diagnostics_models.py  versioning.py
bridge/: package.json
crates/bao-dimsum-process/: Cargo.toml
crates/bao-dimsum-process/src/: jsonrpc.rs  lib.rs  mcp_bridge.rs  pipeline_hooks.rs  provider.rs  skills.rs
crates/bao-dimsum-process/tests/: pipeline_hooks_e2e.rs
crates/bao-engine/: Cargo.toml
crates/bao-engine/src/: lib.rs  scheduler.rs  storage.rs
crates/bao-engine/tests/: default_hooks.rs  scheduler_tick.rs
crates/bao-gateway/: Cargo.toml
crates/bao-gateway/src/: lib.rs
crates/bao-gateway/tests/: bundled_manifest_schema.rs  dimsum_trust.rs  error_event_payload.rs  memory_rollback_conflicts.rs  memory_stress_evolution.rs  run_task_now_and_memory.rs  tasks_and_memory_ipc.rs
crates/bao-storage/: Cargo.toml
crates/bao-storage/migrations/: 0001_init.sql
crates/bao-storage/src/: lib.rs
crates/bao-storage/tests/: memory_mutation.rs  scheduler_due.rs  scheduler_next_run.rs  startup_integrity.rs  task_next_run_compute.rs
docs/: AGENTS.md  PRD.md  desktop-packaging.md
openapi/: bao_gateway_v1.openapi.json
schemas/: audit_log_list_by_device_input_v1.schema.json  audit_log_list_input_v1.schema.json  audit_log_list_output_v1.schema.json  bao_event_v1.schema.json  corrector_decide_retry_error_v1.schema.json  corrector_retry_input_v1.schema.json  corrector_retry_output_v1.schema.json  corrector_validate_tool_result_error_v1.schema.json  corrector_validation_v1.schema.json  device_list_input_v1.schema.json  device_list_output_v1.schema.json  device_revoke_input_v1.schema.json  device_revoke_output_v1.schema.json  dimsum_manifest_v1.schema.json  engine_error_code_v1.schema.json  engine_turn_payload_v1.schema.json  engine_turn_provider_payload_v1.schema.json  engine_turn_tool_payload_v1.schema.json  gateway_error_v1.schema.json  gateway_frame_v1.schema.json  gateway_hello_v1.schema.json  gateway_pairing_token_v1.schema.json  gateway_replay_request_v1.schema.json  gateway_welcome_v1.schema.json  jsonrpc_envelope_v1.schema.json  memory_evidence_v1.schema.json  memory_extract_error_v1.schema.json  memory_extract_input_v1.schema.json  memory_hit_v1.schema.json  memory_inject_error_v1.schema.json  memory_inject_input_v1.schema.json  memory_inject_output_v1.schema.json  memory_mutation_plan_v1.schema.json  permissions_v1.json  provider_call_error_v1.schema.json  provider_cancel_input_v1.schema.json  provider_cancel_output_v1.schema.json  provider_delta_v1.schema.json  provider_jsonrpc_methods_v1.schema.json  provider_run_input_v1.schema.json  (+10 more)
scripts/: audit_engineering_metrics.py  test_high_risk.sh  (+10 more)
(+829 files in other folders)
